--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ var _robots = {
         <div class="centeringContainerHeaderBottomThird">
             <div class="headerBottomThird">
               <div class="navBarCat1 dropdownOnClick" onMouseOver="myApp.ext._store_pandbfashion.a.showDropdown($(this))" onMouseOut="myApp.ext._store_pandbfashion.a.hideDropdown($(this))">
-                  <div class="navTopCat"><a class="navTopCatLink" href="#!category/.">Cat 1</a>
+                  <div class="navTopCat"><a class="navTopCatLink" href="#!category/.designers/1">Cat 1</a>
               </div>
                   <div class="dropdown headerDropdownCat1 alignLeft dropdownOnClick">
                        <div class="dropdownWindow">
@@ -1073,8 +1073,8 @@ don't modify the 'data-templateid' unless you are changing template names and up
 <ul>
 <li id="categoryListTemplate">
 	<a data-tlc="bind $var '.'; store_routing#seoanchor --type='category' --seo; apply --attrib='href';">
-		<div class="thumbContainer"><img data-tlc="bind $var '.%meta.CAT_THUMB'; if (is $var --notblank){{apply --img --media=$var --width=120 --height=120 --bgcolor='#ffffff' --replace;}};" src="blank.gif" class="catThumb" alt="" height="120" width="120"></div>
-		<div class="catName white2LGray"><span data-tlc="bind $var '.pretty'; quickstart#cattext  --legacy;"></span></div>
+		<div class="thumbContainer"><img data-tlc="bind $var '.%meta.CAT_THUMB'; if (is $var --notblank){{apply --img --media=$var --width=220 --height=220 --bgcolor='#ffffff' --replace;}};" src="blank.gif" class="catThumb" alt="" height="220" width="220"></div>
+		<div class="catName white2LGray"><p data-tlc="bind $var '.pretty'; quickstart#cattext  --legacy;"></p></div>
 	</a>
 </li>
 
